<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/list_outer"
    android:orientation="vertical">
  <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:theme="@style/tblHeaderTheme">
    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowHeadItem"
        android:layout_weight="12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/lblItem">
    </TextView>
    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowHeadCost"
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/lblCost">
    </TextView>
    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowHeadValue"
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/lblValue">
    </TextView>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0.1dp"
      android:layout_weight="1"
      android:orientation="horizontal">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_list">
    </ListView>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/buttonBarStyle">
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/button_scan"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
    </Button>
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/button_add"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
    </Button>
  </LinearLayout>
</LinearLayout>