<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10pt">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvtitle"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>
  </LinearLayout>

  <FrameLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ProgressBar
        style="@android:style/Widget.Holo.Light.ProgressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal|center_vertical"
        android:focusable="true"
        />
  </FrameLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:padding="5dp">

    <TextView
        android:id="@+id/label_date"
        android:labelFor="@+id/input_date"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/lblDate"/>

    <TextView
        android:id="@+id/display_date"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <Button
        android:id="@+id/button_date"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_date"
        android:textAllCaps="false"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:padding="5dp">

    <TextView
        android:id="@+id/label_item"
        android:labelFor="@+id/input_item"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/lblItem"/>

    <EditText
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/input_item"
        android:inputType="text"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="55dp"
      android:padding="5dp">

    <TextView
        android:id="@+id/label_cost"
        android:labelFor="@+id/input_cost"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/lblCost"/>

    <EditText
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/input_cost"
        android:inputType="numberSigned|numberDecimal"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/buttonBarStyle">
    <Button
        android:id="@+id/btn_cancel"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel"
        android:background="@color/no"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </Button>
    <Button
        android:id="@+id/btn_submit"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_submit"
        android:background="@color/yes"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    </Button>
  </LinearLayout>

</LinearLayout>