<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:theme="@style/tblOverviewHeaderTheme">
    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowOverviewHeadMonth"
        android:layout_weight="25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@color/overviewTblMonth"
        android:textAlignment="center"
        android:text="@string/tblOverviewHeadMonth">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowOverviewHeadIncome"
        android:layout_weight="28"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/overviewTblIn"
        android:textAlignment="center"
        android:text="@string/tblOverviewHeadIn">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowOverviewHeadOut"
        android:layout_weight="28"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/overviewTblOut"
        android:textAlignment="center"
        android:text="@string/tblOverviewHeadOut">
    </TextView>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowOverviewHeadBalance"
        android:layout_weight="28"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/overviewTblBalance"
        android:textAlignment="center"
        android:text="@string/tblOverviewHeadBalance">
    </TextView>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:orientation="horizontal"
      android:layout_weight="0.1">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/overview_list">
    </ListView>
  </LinearLayout>

  <!--
  <LinearLayout
      android:id="@+id/graph_outer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="bottom">
    <london.fela.budget.fragment.GraphOverview
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="150dp">
    </london.fela.budget.fragment.GraphOverview>
  </LinearLayout>
  -->
</LinearLayout>